# neuro

./: .env.defaults  .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
data/test/input/: text.json  text_csv_short.csv  text_json_insert.json  text_json_merge_1.json  tiddler_html.txt
data/test/results/: text_json_from_csv.json  text_json_insert_output.json  text_json_merged.json  tiddler_text.txt
docs/: nfx.md  ontology.md  setup.md  setup.rst  testing.md  testing.rst
neuro/: __init__.py
neuro/base/: __init__.py  api.py  docker.py  docker_tools.py  index.py  metaontology.py  nfx.py  ontology.py  plugins.py  schema.py
neuro/base/accessors/: __init__.py  nodes.py  objects.py  tiddlers.py
neuro/base/api/: __init__.py  api.py  nb_get.py  ontology.py
neuro/base/nql/: __init__.py  components.py  transformer.py
neuro/core/: __init__.py  base.py  deep.py  tid.py
neuro/core/data/: data.py  dict.py  list.py  str.py
neuro/core/deep/: graph.py  object.py  spacetime.py
neuro/core/file/: file.py  image.py  text.py
neuro/core/files/: file.py  image.py  text.py
neuro/core/science/: biology.py
neuro/tools/: migrate.py
neuro/tools/api/: __init__.py  data_generator.py  tw_actions.py  tw_api.py  tw_del.py  tw_get.py  tw_put.py
neuro/tools/base/: api.py  docker.py  migrate.py
neuro/tools/integrations/: __init__.py  gbif.py  inaturalist.py  ncbi.py  wikidata.py  zotero.py
neuro/tools/local/: refactor.py
neuro/tools/science/: biology.py
neuro/tools/terminal/: README.md  __init__.py  cli.py  common.py  components.py  style.py
neuro/tools/tw5api/: __init__.py  data_generator.py  tw_actions.py  tw_api.py  tw_del.py  tw_get.py  tw_put.py
neuro/tools/wrappers/: __init__.py  gbif.py  inaturalist.py  ncbi.py  wikidata.py
neuro/utils/: SETTINGS.py  __init__.py  build_utils.py  config.py  docker_tools.py  exceptions.py  internal_utils.py  network_utils.py  ntest.py  oop_utils.py  terminal_components.py  terminal_style.py  test_utils.py  time_utils.py
resources/: metaontology.nfx  nql-grammar.lark
resources/data/: taxon-ranks.csv
resources/queries/: instance.rq  organism.rq  taxon.rq  test.rq
resources/templates/: neurowiki.info  raw.info  tiddlywiki.info
resources/test/input/: text_json_insert.json  text_json_merge_1.json  text_json_merge_2.json  text_json_merge_3.json  (+2 more)
tests/: conftest.py  helper.py  test_config.py  test_schema.py
tests/base/: conftest.py  test_docker_tools.py  test_metaontology.py  test_neurobase.py  test_nfx.py  test_nql.py  test_plugins.py  test_schema.py
tests/core/: test_data_dict.py  test_deep.py  test_file.py  test_file_text.py  test_tid.py
tests/tools/: conftest.py  test_api.py  test_integrations.py  test_local.py  test_migrate.py  test_terminal.py  test_wrappers.py
tests/utils/: test_config.py  test_docker_tools.py  test_network_utils.py
(+74 files in other folders)
