[build-system]
requires = ["setuptools==78.0.1"]
build_backend = "setuptools.build_meta"

[project]
name = "neuro"
readme = "README.md"
version = "2.0.0"
dependencies = [
    "bs4>=0.0.1",
    "click>=8.1.0",
    "deepdiff>=6.7.1",
    "docker>=7.1.0",
    "killport>=1.2.0",
    "lark>=1.3.1",
    "lxml>=5.1.0",
    "neo4j>=6.0.3",
    "pillow>=10.2.0",
    "prompt_toolkit>=3.0.52",
    "psutil>=5.9.7",
    "pyexiv2>=2.15.3",
    "pyperclip>=1.9.0",
    "pytest>=7.4.4",
    "python-dotenv>=1.0.1",
    "python-magic>=0.4.27",
    "pytz>=2024.1",
    "requests>=2.31.0",
    "rich>=13.9.4",
    "tqdm>=4.66.1",
    "urllib3>=2.1.0"
]

[project.scripts]
neuro = "neuro.tools.terminal.cli:cli"
ntest = "neuro.utils.ntest:cli"

[project.urls]
repository = "https://github.com/neuroforest/neuro"

[tool.pytest.ini_options]
markers = [
    "integration: integration test"
]

[tool.setuptools.packages.find]
include = ["neuro*"]
exclude = ["build*", "tests*", "venv*"]
