[build-system]
requires = ["setuptools==80.9.0"]
build_backend = "setuptools.build_meta"

[project]
name = "neuro"
readme = "README.md"
version = "2.5.0"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "click>=8.1.0",
    "deepdiff>=6.7.1",
    "docker>=7.1.0",
    "invoke>=2.2.1",
    "killport>=1.2.0",
    "lxml>=5.1.0",
    "neo4j>=6.1.0",
    "pillow>=10.2.0",
    "psutil>=5.9.7",
    "pyexiv2>=2.15.3",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.0.1",
    "python-magic>=0.4.27",
    "pytz>=2024.1",
    "requests>=2.31.0",
    "rich>=13.9.4",
    "tqdm>=4.66.1",
    "urllib3>=2.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.9",
]

[project.scripts]
neuro = "neuro.tools.terminal.cli:cli"

[project.urls]
repository = "https://github.com/neuroforest/neuro"

[tool.pytest.ini_options]
markers = [
    "integration: integration tests (TW5 webserver API and NeuroBase)",
    "e2e: end-to-end tests",
    "unit: unit tests (no database or external dependencies)",
]

[tool.setuptools.packages.find]
include = ["neuro*"]
exclude = ["build*", "tests*", "venv*"]
